--- a/OS/Makefile
+++ b/OS/Makefile
@@ -184,6 +184,7 @@ UPROGS=\
 	_time\
 	_ps\
 	_benchmark\
+	_setPriority\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -252,7 +253,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 
 EXTRA=\
 	mkfs.c ulib.c user.h benchmark.c cat.c echo.c forktest.c grep.c kill.c\
-	ln.c ls.c mkdir.c ps.c rm.c stressfs.c time.c usertests.c wc.c zombie.c\
+	ln.c ls.c mkdir.c ps.c rm.c setPriority.c stressfs.c time.c usertests.c wc.c zombie.c\
 	printf.c umalloc.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
