Implemented and corrected so much, cant even list

--- a/OS/Makefile
+++ b/OS/Makefile
@@ -190,6 +190,8 @@ UPROGS=\
 	_ps\
 	_benchmark\
 	_setPriority\
+	_checkpbs\
+	_checkmlfq
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -257,7 +259,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 # check in that version.
 
 EXTRA=\
-	mkfs.c ulib.c user.h benchmark.c cat.c echo.c forktest.c grep.c kill.c\
+	mkfs.c ulib.c user.h benchmark.c cat.c checkpbs.c checkmlfq.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c ps.c rm.c setPriority.c stressfs.c time.c usertests.c wc.c zombie.c\
 	printf.c umalloc.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
